* removed unused slugs and added style fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,5 @@
 html {
-  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: Roboto, 'Helvetica Neue', Arial, sans-serif;
   font-size: 18px;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
@@ -9,15 +9,19 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
   margin: 0;
 }
 
-.page-enter-active, .page-leave-active {
-  transition: all .3s ease-out;
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.3s ease-out;
 }
-.page-enter, .page-leave-active {
+.page-enter,
+.page-leave-active {
   opacity: 0;
 }
 
@@ -42,8 +46,9 @@ html {
   &:hover {
     .vv-card-image {
       &:before {
-        transition: .5s linear;
-        background-position: -200% 0, 0 0, 0 0, 0 100%, 0 4px, 0 calc(100% - 4px);
+        transition: 0.5s linear;
+        background-position: -200% 0, 0 0, 0 0, 0 100%, 0 4px,
+          0 calc(100% - 4px);
       }
     }
   }
@@ -59,7 +64,12 @@ html {
       left: 0;
       right: 0;
       z-index: 2;
-      background-image: linear-gradient(135deg, rgba(255, 255, 255, .0) 30%, rgba(255, 255, 255, .8), rgba(255, 255, 255, .0) 70%);
+      background-image: linear-gradient(
+        135deg,
+        rgba(255, 255, 255, 0) 30%,
+        rgba(255, 255, 255, 0.8),
+        rgba(255, 255, 255, 0) 70%
+      );
       background-repeat: no-repeat;
       background-size: 200% 100%, auto, 100% 2px, 100% 2px, 100% 1px, 100% 1px;
       background-position: 200% 0, 0 0, 0 0, 0 100%, 0 4px, 0 calc(100% - 4px);
@@ -71,8 +81,10 @@ html {
   }
 }
 
-.container {
-  max-width: 1400px;
+@media only screen and (min-width: 1904px) {
+  .container {
+    max-width: 1400px;
+  }
 }
 
 .vv-container {
@@ -80,7 +92,7 @@ html {
   overflow: hidden;
   padding-bottom: 30px;
   &:before {
-    content: "";
+    content: '';
     position: absolute;
     z-index: 0;
     width: 100%;
@@ -114,6 +126,7 @@ html {
   }
 }
 
-ul, li {
+ul,
+li {
   list-style: none;
 }
