--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,6 +16,10 @@ html {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 .page-enter-active,
 .page-leave-active {
   transition: all 0.3s ease-out;
